--- a/index.html
+++ b/index.html
@@ -46,14 +46,15 @@
                     </li>
                 </ul>
                 <span class="navbar-text">
-                    <a id="loginLink">
+                    <a id="loginLink" data-toggle="modal" data-target="#loginModal">
                         <span class="fa fa-sign-in"></span> Login
                     </a>
                 </span>
             </div>
         </div>
     </nav>
-    <div id="loginModal" class="modal fade" role="dialog">
+    <div id="loginModal" class="modal fade" role="dialog" tabindex="-1" aria-labelledby="exampleModalLabel"
+        aria-hidden="true">
         <div class="modal-dialog modal-lg" role="content">
             <div class="modal-content">
                 <div class="modal-header">
@@ -93,7 +94,8 @@
             </div>
         </div>
     </div>
-    <div id="reservationModal" class="modal fade" role="dialog">
+    <div id="reservationModal" class="modal fade" role="dialog" tabindex="-1" aria-labelledby="exampleModalLabel"
+        aria-hidden="true">
         <div class="modal-dialog modal-lg" role="content">
             <div class="modal-content">
                 <div class="modal-header">
@@ -195,7 +197,8 @@
                     <img src="./assets/img/logo.png" class="img-fluid" />
                 </div>
                 <div class="col-12 col-sm align-self-center">
-                    <a role="button" class="btn btn-block nav-link btn-warning" id="reservationButton">
+                    <a role="button" class="btn btn-block nav-link btn-warning" data-toggle="modal"
+                        data-target="#reservationModal">
                         Reserve Table
                     </a>
                 </div>
@@ -206,68 +209,38 @@
     <div class="container">
         <div class="row row-content">
             <div class="col">
-                <div id="mycarousel" class="carousel slide" data-ride="carousel">
+                <div id="homeCarousel" class="carousel slide" data-ride="carousel">
                     <div class="carousel-inner" role="listbox">
                         <div class="carousel-item active">
-                            <img class="d-block img-fluid" src="./assets/img/uthappizza.png" alt="uthappizza" />
-                            <div class="carousel-caption d-none d-md-block">
-                                <h2>
-                                    Uthappizza
-                                    <span class="badge badge-danger">HOT</span>
-                                    <span class="badge badge-pill badge-secondary">$4.99</span>
-                                </h2>
-                                <p class="d-none d-sm-block">
-                                    A unique combination of Indian Uthappam (pancake) and Italian pizza, topped with
-                                    Cerignola olives, ripe vine cherry tomatoes, Vidalia onion, Guntur chillies and
-                                    Buffalo Paneer.
-                                </p>
-                            </div>
+                            <img class="d-block img-fluid" src="./assets/img/img1.jpg" alt="uthappizza" />
                         </div>
                         <div class="carousel-item">
-                            <img class="d-block img-fluid" src="./assets/img/buffet.png" alt="buffet" />
-                            <div class="carousel-caption d-none d-md-block">
-                                <h2>Weekend Grand Buffet <span class="badge badge-danger">NEW</span></h2>
-                                <p class="d-none d-sm-block">
-                                    Featuring mouthwatering combinations with a choice of five different salads, six
-                                    enticing appetizers, six main entrees and five choicest desserts. Free flowing
-                                    bubbly and soft drinks. All for just $19.99 per person
-                                </p>
-                            </div>
+                            <img class="d-block img-fluid" src="./assets/img/img2.jpg" alt="buffet" />
                         </div>
                         <div class="carousel-item">
-                            <img class="d-block img-fluid" src="./assets/img/alberto.png" alt="alberto" />
-                            <div class="carousel-caption d-none d-md-block">
-                                <h2>Alberto Somayya</h2>
-                                <h4>Executive Chef</h4>
-                                <p class="d-none d-sm-block">
-                                    Award winning three-star Michelin chef with wide International experience having
-                                    worked closely with whos-who in the culinary world, he specializes in creating
-                                    mouthwatering Indo-Italian fusion experiences.
-                                </p>
-                            </div>
+                            <img class="d-block img-fluid" src="./assets/img/img3.jpg" alt="alberto" />
                         </div>
                     </div>
                     <ol class="carousel-indicators">
-                        <li data-target="#mycarousel" data-slide-to="0" class="active"></li>
-                        <li data-target="#mycarousel" data-slide-to="1"></li>
-                        <li data-target="#mycarousel" data-slide-to="2"></li>
+                        <li data-target="#homeCarousel" data-slide-to="0" class="active"></li>
+                        <li data-target="#homeCarousel" data-slide-to="1"></li>
+                        <li data-target="#homeCarousel" data-slide-to="2"></li>
                     </ol>
-                    <a class="carousel-control-prev" href="#mycarousel" role="button" data-slide="prev">
+                    <a class="carousel-control-prev" href="#homeCarousel" role="button" data-slide="prev">
                         <span class="carousel-control-prev-icon"></span>
                     </a>
-                    <a class="carousel-control-next" href="#mycarousel" role="button" data-slide="next">
+                    <a class="carousel-control-next" href="#homeCarousel" role="button" data-slide="next">
                         <span class="carousel-control-next-icon"></span>
                     </a>
-
                 </div>
-
             </div>
-            <div class="btn-group" id="carouselButtonGroup">
-                <button class="btn btn-danger btn-sm" id="carouselButton">
-                    <span id="carousel-button-icon" class="fa fa-pause"></span>
+            <div id="carouselButtons" class="btn-group">
+                <button id="pauseButton" class="btn btn-danger" style="height: 40px;">
+                    <i class="fa fa-pause"></i>
                 </button>
             </div>
         </div>
+
         <div class="row row-content align-items-center">
             <div class="col-12 col-sm-4 order-sm-last col-md-3">
                 <h3>Our Lipsmacking Culinary Creations</h3>
@@ -345,10 +318,10 @@
                 <div class="col-4 offset-1 col-sm-2">
                     <h5>Links</h5>
                     <ul class="list-unstyled">
-                        <i class="fa fa-phone fa-lg"></i>: +852 1234 5678<br />
-                        <i class="fa fa-fax fa-lg"></i>: +852 8765 4321<br />
-                        <i class="fa fa-envelope fa-lg"></i>:
-                        <a href="mailto:confusion@food.net">confusion@food.net</a>
+                        <li><a href="/index.html">Home</a></li>
+                        <li><a href="/aboutus.html">About</a></li>
+                        <li><a href="#">Menu</a></li>
+                        <li><a href="/contactus.html">Contact</a></li>
                     </ul>
                 </div>
                 <div class="col-7 col-sm-5">
@@ -397,7 +370,6 @@
     <script src="node_modules/jquery/dist/jquery.slim.min.js"></script>
     <script src="node_modules/popper.js/dist/umd/popper.min.js"></script>
     <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
-    <script src="node_modules/tether/dist/js/tether.min.js"></script>
     <script src="./assets/js/scripts.js"></script>
 </body>
 
