--- a/index.html
+++ b/index.html
@@ -235,7 +235,8 @@
                 </div>
             </div>
             <div id="carouselButtons" class="btn-group">
-                <button id="pauseButton" class="btn btn-danger" style="height: 40px;">
+                <button id="pauseButton" class="btn btn-danger"
+                    style="height: 40px; transform: translate(537px, 30px);">
                     <i class="fa fa-pause"></i>
                 </button>
             </div>
